src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsT-dwF1000-b-wfsAN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: true\ndefault column width: F1000\nborder on\nwant fullscreen: AN\ntabbed"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]

post-map configures:
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen]
size: 1280 × 720, bounds: 1231 × 680, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1000 × 680, bounds: 1231 × 680, states: [Activated]
